fix body horizontal scrolling

--- a/css/responsiveStyle.css
+++ b/css/responsiveStyle.css
@@ -11,7 +11,6 @@
     html {
         margin: 0px;
         height: 100%;
-        width: 100%;
     }
     .inside header {
         z-index: 1200;
