--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,6 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 
 .filter-options {
-    width: 100%;
     background-color: #3397DB;
     align-items: center;
     padding: 10px 5px;
